app/kubernetes/ingress.yaml
# kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hatespeech-ingress
  namespace: hatespeech
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: prediction-service
                port:
                  number: 8000
